package com.xinqihd.sns.gameserver.proto;
//Get the server list

option java_outer_classname = "XinqiBceVipInfo"; 
/**
* Check the different vip level rewards.
*/
message BceVipInfo {
}
